--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laracasts/validation": "~1.0",
         "laracasts/flash": "~1.0",
         "zizaco/entrust": "1.2.*@dev",
-        "anahkiasen/polyglot": "~1.2"
+        "anahkiasen/polyglot": "~1.2",
+        "dimsav/laravel-translatable": "4.2.*"
     },
     "autoload": {
         "classmap": [
