--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laracasts/flash": "~1.0",
         "zizaco/entrust": "1.2.*@dev",
         "anahkiasen/polyglot": "~1.2",
-        "dimsav/laravel-translatable": "4.2.*"
+        "dimsav/laravel-translatable": "4.2.*",
+        "way/generators": "2.6.1",
+        "ckeditor/ckeditor": "4.4.4"
     },
     "autoload": {
         "classmap": [
