--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "anahkiasen/polyglot": "~1.2",
         "dimsav/laravel-translatable": "4.2.*",
         "way/generators": "2.6.1",
-        "ckeditor/ckeditor": "4.4.4"
+        "ckeditor/ckeditor": "4.4.4",
+        "mews/purifier": "1.0.1"
     },
     "autoload": {
         "classmap": [
