--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "dimsav/laravel-translatable": "4.2.*",
         "way/generators": "2.6.1",
         "mews/purifier": "1.0.1",
-        "barryvdh/laravel-translation-manager": "master"
+        "barryvdh/laravel-translation-manager": "dev-master"
     },
     "autoload": {
         "classmap": [
