--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dimsav/laravel-translatable": "4.2.*",
         "way/generators": "2.6.1",
         "mews/purifier": "1.0.1",
-        "barryvdh/laravel-translation-manager": "0.1.2"
+        "barryvdh/laravel-translation-manager": "0.1.2",
+        "maatwebsite/excel": "~1.2.1"
     },
     "autoload": {
         "classmap": [
